--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-    <div class="question-card">
+    <div class="question-card" id="score">
         <h3 id="question">Question here</h3>
         <ul>
-            <li><input id="a" type="radio" name="answer"><label id='a-text' for="a">Answer a</label></li>
-            <li><input id="b" type="radio" name="answer"><label id='b-text' for="b">Answer b</label></li>
-            <li><input id="c" type="radio" name="answer"><label id='c-text' for="c">Answer c</label></li>
-            <li><input id="d" type="radio" name="answer"><label id='d-text' for="d">Answer d</label></li>
+            <li><input id="a" type="radio" class="answer" name="answer"><label id='a-text' for="a">Answer a</label></li>
+            <li><input id="b" type="radio" class="answer" name="answer"><label id='b-text' for="b">Answer b</label></li>
+            <li><input id="c" type="radio" class="answer" name="answer"><label id='c-text' for="c">Answer c</label></li>
+            <li><input id="d" type="radio" class="answer" name="answer"><label id='d-text' for="d">Answer d</label></li>
         </ul>
         <button id="submit">Submit</button>
 
